--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -20,8 +20,11 @@
     "react": "17.0.2",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
+    "react-infinite-scroller": "^1.2.6",
     "react-player": "^2.11.0",
+    "react-slick": "^0.29.0",
     "react-youtube": "^10.1.0",
+    "slick-carousel": "^1.8.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -29,6 +32,7 @@
     "@graphql-codegen/typescript": "^2.8.7",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
+    "@types/react-infinite-scroller": "^1.2.3",
     "typescript": "^4.9.4"
   }
 }
