--- a/class/package.json
+++ b/class/package.json
@@ -16,6 +16,7 @@
     "@next/font": "13.1.1",
     "antd": "^5.1.3",
     "axios": "^1.2.2",
+    "firebase": "9.10.0",
     "graphql": "^16.6.0",
     "next": "12.1.0",
     "react": "17.0.2",
