--- a/class/package.json
+++ b/class/package.json
@@ -10,11 +10,12 @@
     "generate": "graphql-codegen"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.3",
+    "@apollo/client": "^3.7.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.1",
     "antd": "^5.1.3",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^1.2.2",
     "firebase": "9.10.0",
     "graphql": "^16.6.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.4",
     "@graphql-codegen/typescript": "^2.8.7",
+    "@types/apollo-upload-client": "^17.0.2",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
     "@types/react-infinite-scroller": "^1.2.3",
