--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.1.2",
     "axios": "^1.2.2",
     "graphql": "^16.6.0",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-daum-postcode": "^3.1.1",
@@ -25,14 +26,17 @@
     "react-slick": "^0.29.0",
     "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.4",
     "@graphql-codegen/typescript": "^2.8.7",
+    "@types/lodash": "^4.14.191",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
     "@types/react-infinite-scroller": "^1.2.3",
+    "@types/uuid": "^9.0.0",
     "typescript": "^4.9.4"
   }
 }
