--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -25,6 +25,7 @@
     "react-player": "^2.11.0",
     "react-slick": "^0.29.0",
     "react-youtube": "^10.1.0",
+    "recoil": "^0.7.6",
     "slick-carousel": "^1.8.1",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
