--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "antd": "^5.1.2",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^1.2.2",
     "graphql": "^16.6.0",
     "lodash": "^4.17.21",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.4",
     "@graphql-codegen/typescript": "^2.8.7",
+    "@types/apollo-upload-client": "^17.0.2",
     "@types/lodash": "^4.14.191",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
