--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.7.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.11",
     "antd": "^5.1.2",
     "apollo-upload-client": "^17.0.0",
     "axios": "^1.2.2",
@@ -22,6 +23,7 @@
     "react": "17.0.2",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.43.1",
     "react-infinite-scroller": "^1.2.6",
     "react-player": "^2.11.0",
     "react-slick": "^0.29.0",
@@ -29,7 +31,8 @@
     "recoil": "^0.7.6",
     "slick-carousel": "^1.8.1",
     "ts-node": "^10.9.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.4",
