--- a/class/tsconfig.json
+++ b/class/tsconfig.json
@@ -19,7 +19,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "pages/section10/10-01-typescript/index.js"
+    "pages/section10/10-01-typescript/index.js",
+    "pages/section24/24-01-react-hook-form/01-before.js"
   ],
   "exclude": ["node_modules"]
 }
