--- a/class/package.json
+++ b/class/package.json
@@ -15,11 +15,14 @@
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.11",
     "@next/font": "13.1.1",
+    "@types/dompurify": "^2.4.0",
     "antd": "^5.1.3",
     "apollo-upload-client": "^17.0.0",
     "axios": "^1.2.2",
+    "dompurify": "^3.0.0",
     "firebase": "9.10.0",
     "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -28,12 +31,14 @@
     "react-hook-form": "^7.43.1",
     "react-infinite-scroller": "^1.2.6",
     "react-player": "^2.11.0",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
     "recoil": "^0.7.6",
     "slick-carousel": "^1.8.1",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0",
-    "yup": "^1.0.0"
+    "yup": "^1.0.0",
+    "zen-observable": "^0.10.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.4",
@@ -45,6 +50,7 @@
     "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-slick": "^0.23.10",
     "@types/uuid": "^9.0.0",
+    "@types/zen-observable": "^0.8.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.6.0",
