--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -27,6 +27,7 @@
     "react-infinite-scroller": "^1.2.6",
     "react-player": "^2.11.0",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^6.8.2",
     "react-slick": "^0.29.0",
     "react-youtube": "^10.1.0",
     "recoil": "^0.7.6",
