--- a/class/package.json
+++ b/class/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "test": "jest",
+    "test:e2e": "cypress open"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -25,6 +27,7 @@
     "graphql-request": "^5.1.0",
     "lodash": "^4.17.21",
     "next": "12.1.0",
+    "next-router-mock": "^0.9.2",
     "react": "17.0.2",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
@@ -43,6 +46,8 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.4",
     "@graphql-codegen/typescript": "^2.8.7",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.0",
     "@types/apollo-upload-client": "^17.0.2",
     "@types/lodash": "^4.14.191",
     "@types/node": "17.0.2",
@@ -52,6 +57,8 @@
     "@types/uuid": "^9.0.0",
     "@types/zen-observable": "^0.8.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "cross-fetch": "^3.1.5",
+    "cypress": "^12.7.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^32.0.0",
@@ -60,6 +67,9 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.1",
     "husky": "^8.0.3",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "msw": "^1.1.0",
     "prettier": "2.8.3",
     "typescript": "*"
   },
