--- a/freeboard_frontend/package.json
+++ b/freeboard_frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.43.1",
     "react-infinite-scroller": "^1.2.6",
+    "react-kakao-maps-sdk": "^1.1.6",
     "react-player": "^2.11.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.2",
